<resources>
    <string name="app_name">Courses</string>
    <string name="fill_empty">Please fill empty fields</string>
    <string name="confirm_not_match">Password and confirmation doesn\'t match</string>
    <string name="password_short">"Password should have at least 6 charachters "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="register_success">Registered successfully</string>
    <string name="register_error">Error, registeration failed</string>
    <string name="you_have_an_account">You have an account ?</string>
    <string name="u_register_u"><![CDATA[<u> Register </u>]]></string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_error">Error, couldn\'t login, please check your data</string>
    <string name="login_success">Logged in successfully</string>
</resources>